[tool.poetry]
name = "qiskit-learn"
version = "0.1.0"
description = ""
authors = ["naoto <stardustforever012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
qiskit = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
