[tool.poetry]
name = "qiskit-learn"
version = "0.1.0"
description = ""
authors = ["naoto <stardustforever012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
qiskit = "^1.3.0"
qiskit-aer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
